# src/routes/product.route.ts
@@ -2,9 +2,10 @@ import { Router } from 'express'
 
 import { createProduct, getProduct, getProducts } from '../controllers/product.controller.js'
 import { authenticateToken} from '../middlewares/auth.middleware.js'
+import { uploadProduct } from '../lib/cloudinary.js'
 
 export const ProductRouter: Router = Router()
 
 ProductRouter.get('/', getProducts)
 ProductRouter.get('/:id', getProduct)
-ProductRouter.post('/', authenticateToken, createProduct);
+ProductRouter.post('/', authenticateToken, uploadProduct.single('image'), createProduct);
